--- a/frontend/src/pages/Login/styles/LoginPage.css
+++ b/frontend/src/pages/Login/styles/LoginPage.css
@@ -31,6 +31,11 @@
   text-align: center;
 }
 
+.loginError {
+  text-align: center;
+  color: red;
+}
+
 .userNameSection {
   padding: 10px;
 }
@@ -46,4 +51,9 @@
 .loginSection {
   padding: 10px;
   text-align: center;
+}
+
+.navToRegisterSection {
+  text-align: center;
+  padding-bottom: 10px;
 }
