--- a/frontend/src/pages/Login/styles/LoginPage.css
+++ b/frontend/src/pages/Login/styles/LoginPage.css
@@ -1,59 +1,123 @@
 /* Styles for login page */
 /* Nathaniel */
 
-.welcomeTitle {
-  font-size: 55px;
-  font-weight: 550;
+#loginContainer {
+    background-image: url(../../../images/background.jpg);
+    background-repeat: repeat;
+    background-size: cover;
+}
+
+.welcomeTitle1 {
+  font-family:'Roboto',sans-serif;
   text-align: center;
-  padding-top: 35px;
+  margin-top: 10%;
+  color: #DCDCDC;
 }
 
-.welcomeSubTitle {
+.welcomeTitle2 {
+  font-family:'Roboto',sans-serif;
   text-align: center;
-  font-size: 25px;
+  color: #DCDCDC;
+  font-size: 18px;
 }
 
-.loginFormContainer {
-  padding-top: 70px;
-  display: flex;
-  justify-content: center;
-}
-
-#loginForm {
-  border: 2px solid gainsboro;
-  border-radius: 10px;
-  width: 25%;
-}
-
-.loginTitle {
-  padding: 10px;
-  font-size: 30px;
-  text-align: center;
-}
-
-.loginError {
-  text-align: center;
-  color: red;
-}
-
-.userNameSection {
-  padding: 10px;
-}
-
-.passwordSection {
-  padding: 10px;
-}
-
-.roleSection {
-  padding: 10px;
+.loginBox {
+  font-family:'Roboto',sans-serif;
+  margin-top: 1%;
+  margin-left: 33.5%;
+  padding: 20px;
+  color: #DCDCDC;
+  background-color: rgba(169, 169, 169, 0.6);
 }
 
 .loginSection {
-  padding: 10px;
+  margin-top: 1%;
   text-align: center;
 }
 
 .navToRegisterSection {
+  margin-top: 1%;
   text-align: center;
-  padding-bottom: 10px;
+}
+
+.footerSection1 {
+    margin-top: 1%;
+    text-align: center;
+}
+
+.footerSection2 {
+    margin-top: 1%;
+    text-align: center;
+}
+
+.signInButton {
+  background-color:#696969;
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.1em solid #DCDCDC;
+  margin:0 0.3em 0.3em 0;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-weight:300;
+  color:#DCDCDC;
+  text-align:center;
+  transition: all 0.2s; 
+}
+
+.register {
+  background-color:#696969;
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.1em solid #DCDCDC;
+  margin:0 0.3em 0.3em 0;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-weight:300;
+  color:#DCDCDC;
+  text-align:center;
+  transition: all 0.2s;
+}
+
+.loginHR {
+  color: rgba(169, 169, 169, 0.6);
+}
+
+.signInButton:hover {
+  color:#DCDCDC;
+  background-color:rgba(255, 255, 255, 0);
+  border:0.1em solid #DCDCDC;
+}
+
+.register:hover {
+  color:#DCDCDC;
+  background-color:rgba(255, 255, 255, 0);
+  border:0.1em solid #DCDCDC;
+}
+
+input {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  box-shadow: 0.2px 0.2px #888888;
+  background-color: rgba(255, 255, 255, 0.6);
+  font: 20px;
+}
+
+.footer {
+  margin-top: 10%;
+  color: #DCDCDC;
+}
+
+.loginTitle {
+  font-family:'Roboto',sans-serif;
+  text-align: center;
+  color: #DCDCDC;
+  font-size: 25px;
+}
+
+.loginError {
+  text-align: center;
+  color: #ff9a9a;
 }
