--- a/frontend/src/pages/Registration/styles/RegisterPage.css
+++ b/frontend/src/pages/Registration/styles/RegisterPage.css
@@ -22,7 +22,6 @@
 }
 
 .registerBox {
-    /* text-align: center; */
     font-family:'Roboto',sans-serif;
     margin-top: 1%;
     margin-left: 33.5%;
@@ -97,24 +96,6 @@
     border:0.1em solid #DCDCDC;
 }
 
-/*.userName input {
-    border: 0;
-    padding: 0;
-    margin: 0;
-    box-shadow: 0.2px 0.2px #888888;
-    background-color: rgba(255, 255, 255, 0.6);
-    font: 20px;
-}
-
-.password input {
-    border: 0;
-    padding: 0;
-    margin: 0;
-    box-shadow: 0.2px 0.2px #888888;
-    background-color: rgba(255, 255, 255, 0.6);
-    font: 20px;
-}*/
-
 input {
     border: 0;
     padding: 0;
@@ -127,4 +108,11 @@ input {
 .footer {
     margin-top: 10%;
     color: #DCDCDC;
+}
+
+.registerTitle {
+  font-family:'Roboto',sans-serif;
+  text-align: center;
+  color: #DCDCDC;
+  font-size: 25px;
 }
