--- a/frontend/src/pages/Registration/styles/RegisterPage.css
+++ b/frontend/src/pages/Registration/styles/RegisterPage.css
@@ -8,25 +8,25 @@
 }
 
 .title {
-    font-family:'Roboto',sans-serif;
+    font-family: "Roboto", sans-serif;
     text-align: center;
     margin-top: 10%;
-    color: #DCDCDC;
+    color: #dcdcdc;
 }
 
 .title2 {
-    font-family:'Roboto',sans-serif;
+    font-family: "Roboto", sans-serif;
     text-align: center;
-    color: #DCDCDC;
+    color: #dcdcdc;
     font-size: 18px;
 }
 
 .registerBox {
-    font-family:'Roboto',sans-serif;
+    font-family: "Roboto", sans-serif;
     margin-top: 1%;
     margin-left: 33.5%;
     padding: 20px;
-    color: #DCDCDC;
+    color: #dcdcdc;
     background-color: rgba(169, 169, 169, 0.6);
 }
 
@@ -51,33 +51,33 @@
 }
 
 .signUpButton {
-    background-color:#696969;
-    display:inline-block;
-    padding:0.35em 1.2em;
-    border:0.1em solid #DCDCDC;
-    margin:0 0.3em 0.3em 0;
-    border-radius:0.12em;
+    background-color: #696969;
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #dcdcdc;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
     box-sizing: border-box;
-    text-decoration:none;
-    font-weight:300;
-    color:#DCDCDC;
-    text-align:center;
-    transition: all 0.2s; 
+    text-decoration: none;
+    font-weight: 300;
+    color: #dcdcdc;
+    text-align: center;
+    transition: all 0.2s;
 }
 
 .login {
-    background-color:#696969;
-    display:inline-block;
-    padding:0.35em 1.2em;
-    border:0.1em solid #DCDCDC;
-    margin:0 0.3em 0.3em 0;
-    border-radius:0.12em;
+    background-color: #696969;
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #dcdcdc;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
     box-sizing: border-box;
-    text-decoration:none;
-    font-weight:300;
-    color:#DCDCDC;
-    text-align:center;
-    transition: all 0.2s;  
+    text-decoration: none;
+    font-weight: 300;
+    color: #dcdcdc;
+    text-align: center;
+    transition: all 0.2s;
 }
 
 .registerHR {
@@ -85,15 +85,15 @@
 }
 
 .signUpButton:hover {
-    color:#DCDCDC;
-    background-color:rgba(255, 255, 255, 0);
-    border:0.1em solid #DCDCDC;
+    color: #dcdcdc;
+    background-color: rgba(255, 255, 255, 0);
+    border: 0.1em solid #dcdcdc;
 }
 
 .login:hover {
-    color:#DCDCDC;
-    background-color:rgba(255, 255, 255, 0);
-    border:0.1em solid #DCDCDC;
+    color: #dcdcdc;
+    background-color: rgba(255, 255, 255, 0);
+    border: 0.1em solid #dcdcdc;
 }
 
 input {
@@ -107,12 +107,12 @@ input {
 
 .footer {
     margin-top: 10%;
-    color: #DCDCDC;
+    color: #dcdcdc;
 }
 
 .registerTitle {
-  font-family:'Roboto',sans-serif;
-  text-align: center;
-  color: #DCDCDC;
-  font-size: 25px;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    color: #dcdcdc;
+    font-size: 25px;
 }
