--- a/frontend/src/components/Gamer/styles/MyCartItem.css
+++ b/frontend/src/components/Gamer/styles/MyCartItem.css
@@ -6,7 +6,7 @@
     display: inline-block;
     background-color: #e1e7ec;
     border-radius: 7px !important;
-    border-color: #DCDCDC;
+    border-color: #dcdcdc;
     margin-bottom: 30px !important;
     left: 60%;
 }
@@ -31,9 +31,9 @@ img {
 }
 
 .btn-sm {
-    padding: .45rem .5rem !important;
-    font-size: .875rem;
+    padding: 0.45rem 0.5rem !important;
+    font-size: 0.875rem;
     line-height: 1.5;
-    border-radius: .2rem;
+    border-radius: 0.2rem;
     color: white;
 }
