--- a/frontend/src/components/Gamer/styles/NavBarGamer.css
+++ b/frontend/src/components/Gamer/styles/NavBarGamer.css
@@ -22,7 +22,7 @@
     margin-left: 13%;
     margin-top: 5%;
     margin-bottom: 5%;
-    background-color: #696969; 
+    background-color: #696969;
 }
 
 .button {
@@ -49,7 +49,7 @@
 }
 
 .button span:after {
-    content: '\00bb';
+    content: "\00bb";
     position: absolute;
     opacity: 0;
     top: 0;
