--- a/frontend/src/components/Gamer/styles/MyCartItem.css
+++ b/frontend/src/components/Gamer/styles/MyCartItem.css
@@ -1,39 +1,41 @@
 /* Yuanyuan:
     Style sheet for cart items part */
-.card {
-    margin-top: 10%;
-    position: relative;
-    display: inline-block;
-    background-color: #e1e7ec;
-    border-radius: 7px !important;
-    border-color: #dcdcdc;
-    margin-bottom: 30px !important;
-    left: 60%;
-}
-
-.card-title {
-    display: block;
-    padding: 10px;
-    border-bottom: 1px solid #e1e7ec;
-}
-
-.mainImg {
-    display: table-cell;
-    width: 65%;
+.gamerCartItemContainer {
+    background-color: rgba(169, 169, 169, 0.6);
+    border-bottom: 2px solid gainsboro;
+    border-top: 2px solid gainsboro;
     padding: 15px;
-    vertical-align: middle;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-img {
-    display: block;
-    width: 100%;
-    margin-bottom: 3px;
+.cartMainImg img {
+    height: 180px;
+    width: 180px;
 }
 
-.btn-sm {
-    padding: 0.45rem 0.5rem !important;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    border-radius: 0.2rem;
-    color: white;
+.gamerCartItemTitle {
+    color: gainsboro;
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.gamerCartItemPublishedBy {
+    color: gainsboro;
+    font-size: 15px;
+}
+
+.gamerCartItemDescription {
+    color: gainsboro;
+    font-style: italic;
+    font-size: 17px;
+    width: 350px;
+}
+
+.gamerCartItemPrice {
+    color: gainsboro;
+    font-weight: bold;
+    font-size: 25px;
 }
