--- a/frontend/src/components/Gamer/styles/MyCartList.css
+++ b/frontend/src/components/Gamer/styles/MyCartList.css
@@ -4,3 +4,15 @@
   margin-left: 12.5%;
   margin-right: 12.5%;
 }
+
+.gamerCartListTitle {
+  margin-top: 20px;
+  color: gainsboro;
+  text-align: center;
+}
+
+.gamerCartListDescription {
+  color: gainsboro;
+  text-align: center;
+  margin-bottom: 20px;
+}
