--- a/frontend/src/components/Gamer/styles/NavBarGamer.css
+++ b/frontend/src/components/Gamer/styles/NavBarGamer.css
@@ -1,60 +1,39 @@
 /* Yuanyuan: 
     Style Sheet for Navigation bar of Gamer Pages */
 .navBarGamer {
-    background-color: #696969;
+    background-color: #eee;
+    border-bottom: 2px solid #bbb;
 }
 
-.navItemHome {
-    margin-left: 13%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    background-color: #696969;
+.navBarItems {
+    margin-left: 20px;
+}
+
+.welcomeGamer {
+    margin-right: 150px;
+    font-size: 20px;
+    font-weight: 520;
+}
+
+.imageNavItem img {
+    width: 50px;
+    height: 50px;
+}
+
+.logoutButton {
+    margin-right: 20px;
 }
 
 .navItemCart {
-    margin-left: 13%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    background-color: #696969;
+    margin-left: 20px;
+    font-size: 20px;
+    font-weight: 520;
 }
 
 .navItemStore {
-    margin-left: 13%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    background-color: #696969;
-}
-
-.button {
-    margin-left: 20%;
-    background-color: #696969;
-    border: 2px solid #696969;
-    border-radius: 12px;
-    color: white;
-    padding: 2px 4px;
-    text-align: center;
-    font-size: 24px;
-    margin: 4px 2px;
-    opacity: 0.6;
-    transition: 0.4s;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.4s;
-}
-
-.button span:after {
-    content: "\00bb";
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
+    margin-left: 20px;
+    font-size: 20px;
+    font-weight: 520;
 }
 
 .button:hover span {
