--- a/frontend/src/pages/GamingCompany/styles/GamingCompanyStorePage.css
+++ b/frontend/src/pages/GamingCompany/styles/GamingCompanyStorePage.css
@@ -1,4 +1,4 @@
-/* Styles for store page for gaming company */
+/* Styles for store page for gaming company publicist */
 /* Nathaniel */
 
 .gameStoreTitle {
