--- a/frontend/src/pages/GamingCompany/styles/PublishGamePage.css
+++ b/frontend/src/pages/GamingCompany/styles/PublishGamePage.css
@@ -1,10 +1,10 @@
-/* Styles for MyGames page for a gaming company publicist user */
+/* Styles for PublishGame page for a gaming company publicist user */
 /* Nathaniel */
 
-.myGamesTitle {
+/*.myGamesTitle {
   padding-top: 20px;
   text-align: center;
   font-weight: 510;
   font-size: 30px;
   padding-bottom: 20px;
-}
+}*/
