--- a/frontend/src/components/GamingCompany/styles/MyGamesItem.css
+++ b/frontend/src/components/GamingCompany/styles/MyGamesItem.css
@@ -5,15 +5,19 @@
   border-bottom: 2px solid gainsboro;
   border-top: 2px solid gainsboro;
   padding: 15px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+.myGamesItemSection1 {
+  width: 200px;
+}
+
 .myGamesItemImage img {
   height: 180px;
-  width: 180px;
+  width: 100%;
 }
 
 .myGamesItemTitle {
@@ -34,8 +38,4 @@
 .myGameItemPriceSection {
   font-weight: bold;
   font-size: 25px;
-}
-
-.deleteMyGameButtonSection button {
-  width: 50px;
 }
