--- a/frontend/src/pages/Registration/styles/RegisterPage.css
+++ b/frontend/src/pages/Registration/styles/RegisterPage.css
@@ -8,36 +8,40 @@
 }
 
 .title {
-    /*font-family: "Roboto", sans-serif;*/
-    text-align: center;
-    margin-top: 10%;
-    color: #dcdcdc;
+    margin-left: 19%;
+    margin-top: 3%;
+    color: #fff;
+    font-size: 45px;
 }
 
 .title2 {
-    /*font-family: "Roboto", sans-serif;*/
-    text-align: center;
-    color: #dcdcdc;
+    margin-left: 19%;
+    color: #fff;
+    font-size: 25px;
+}
+
+.registerInfoBox {
+    margin-left: 8px;
+    margin-top: 10px;
+    color: #fff;
     font-size: 18px;
 }
 
 .registerBox {
-    /*font-family: "Roboto", sans-serif;*/
+    border-radius: 3px;
+    margin-left: 20%;
     margin-top: 1%;
-    margin-left: 33.5%;
     padding: 20px;
-    color: #dcdcdc;
-    background-color: rgba(169, 169, 169, 0.6);
+    color: #fff;
+    background-color: #757575;
 }
 
 .signUpContainer {
     margin-top: 1%;
-    text-align: center;
 }
 
 .loginContainer {
     margin-top: 1%;
-    text-align: center;
 }
 
 .footerSection1 {
@@ -51,68 +55,78 @@
 }
 
 .signUpButton {
-    background-color: #696969;
-    display: inline-block;
-    padding: 0.35em 1.2em;
-    border: 0.1em solid #dcdcdc;
-    margin: 0 0.3em 0.3em 0;
+    background-color: #77c2ae;
     border-radius: 0.12em;
     box-sizing: border-box;
-    text-decoration: none;
-    font-weight: 300;
-    color: #dcdcdc;
-    text-align: center;
-    transition: all 0.2s;
-}
-
-.login {
-    background-color: #696969;
-    display: inline-block;
-    padding: 0.35em 1.2em;
-    border: 0.1em solid #dcdcdc;
-    margin: 0 0.3em 0.3em 0;
-    border-radius: 0.12em;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-weight: 300;
-    color: #dcdcdc;
-    text-align: center;
-    transition: all 0.2s;
-}
-
-.registerHR {
-    color: rgba(169, 169, 169, 0.6);
+    color: #fff;
+    width: 150px;
 }
 
 .signUpButton:hover {
-    color: #dcdcdc;
-    background-color: rgba(255, 255, 255, 0);
-    border: 0.1em solid #dcdcdc;
+    color: #fff;
+    background-color: #68ab99;
+}
+
+.login {
+    background-color: #77c2ae;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    color: #fff;
 }
 
 .login:hover {
-    color: #dcdcdc;
-    background-color: rgba(255, 255, 255, 0);
-    border: 0.1em solid #dcdcdc;
+    color: #fff;
+    background-color: #68ab99;
 }
 
-input {
-    border: 0;
-    padding: 0;
-    margin: 0;
-    box-shadow: 0.2px 0.2px #888888;
-    background-color: rgba(255, 255, 255, 0.6);
-    font: 20px;
-}
-
-.footer {
+.footerRegister {
     margin-top: 10%;
-    color: #dcdcdc;
+    color: #fff;
+}
+
+.footerRegisterSection1 {
+    margin-top: 1%;
+    text-align: center;
+}
+
+.footerRegisterSection2 {
+    text-align: center;
 }
 
 .registerTitle {
-    /*font-family: "Roboto", sans-serif;*/
-    text-align: center;
-    color: #dcdcdc;
     font-size: 25px;
+    padding-bottom: 10px;
+}
+
+.userName {
+    padding-bottom: 15px;
+}
+
+.userName label {
+    margin-bottom: .3rem;
+}
+
+.password {
+    padding-bottom: 15px;
+}
+
+.password label {
+    margin-bottom: .3rem;
+}
+
+.selectRole {
+    padding-bottom: 15px;
+}
+
+.selectRole label {
+    padding-bottom: 0px;
+    margin-bottom: .3rem;
+}
+
+.gamingCompany {
+    padding-bottom: 15px;
+}
+
+.gamingCompany label {
+    margin-bottom: .3rem;
 }
