--- a/frontend/src/components/Gamer/styles/StoreItem.css
+++ b/frontend/src/components/Gamer/styles/StoreItem.css
@@ -1,9 +1,9 @@
 /* Yuanyuan:
     Style sheet for gamer store items */
 .gamerStoreItemsContainer {
-    background-color: rgba(169, 169, 169, 0.6);
-    border-bottom: 2px solid gainsboro;
-    border-top: 2px solid gainsboro;
+    background-color: #757575;
+    border-bottom: 2px solid #fff;
+    border-top: 2px solid #fff;
     padding: 15px;
     margin-bottom: 10px;
     display: flex;
@@ -16,26 +16,42 @@
     width: 180px;
 }
 
+.gamerStoreItemSection1 {
+    box-sizing: content-box;
+    width: 200px;
+}
+
 .gamerStoreItemTitle {
-    color: gainsboro;
+    color: white;
     font-size: 25px;
     font-weight: 600;
 }
 
 .gamerStoreItemPublishedBy {
-    color: gainsboro;
+    color: white;
     font-size: 15px;
 }
 
 .gamerStoreItemDescription {
-    color: gainsboro;
+    color: white;
     font-style: italic;
     font-size: 17px;
     width: 350px;
 }
 
 .gamerStoreItemPrice {
-    color: gainsboro;
+    color: white;
     font-weight: bold;
     font-size: 25px;
+}
+
+.addButton {
+    color: white;
+    background-color: #77c2ae;
+    border: 0em;
+}
+
+.addButton:hover {
+    color: white;
+    background-color: #68ab99;
 }
