--- a/frontend/src/components/GamingCompany/styles/NavBarCompany.css
+++ b/frontend/src/components/GamingCompany/styles/NavBarCompany.css
@@ -2,8 +2,8 @@
 /* Nathaniel */
 
 .navBarCompany {
-  background-color: #eee;
-  border-bottom: 2px solid #bbb;
+  background-color: #757575;
+  border-bottom: 2px solid white;
 }
 
 .navItems {
@@ -21,10 +21,18 @@
   font-weight: 520;
 }
 
+.storeNavItem a {
+  color: white !important;
+}
+
 .myGamesNavItem {
   margin-top: 4px;
   font-size: 18px;
   font-weight: 520;
+}
+
+.myGamesNavItem a {
+  color: white !important;
 }
 
 .publishGameNavItem {
@@ -33,12 +41,25 @@
   font-weight: 520;
 }
 
+.publishGameNavItem a {
+  color: white !important;
+}
+
 .welcomeGamingCompanyPublicist {
+  color: white;
   margin-right: 300px;
   font-size: 20px;
   font-weight: 520;
 }
 
-.logoutButton {
+.logoutButtonCompany {
+  color: white;
+  background-color: #77c2ae;
+  border: 0em;
   margin-right: 20px;
+}
+
+.logoutButtonCompany:hover {
+  color: white;
+  background-color: #68ab99;
 }
