--- a/frontend/src/pages/Gamer/styles/GamerCartPage.css
+++ b/frontend/src/pages/Gamer/styles/GamerCartPage.css
@@ -6,6 +6,24 @@
 }
 
 .gamerCartFooter {
+  color: white;
   margin-top: 38%;
   text-align: center;
+}
+
+.gamerCartFooter div {
+  font-family: "Raleway", sans-serif;
+}
+
+.gamerCartTitle {
+  margin-top: 15px;
+  color: white;
+  margin-left: 13%;
+  font-family: "Raleway", sans-serif;
+}
+
+.gamerCartDescription {
+  color: white;
+  margin-left: 13%;
+  font-family: "Raleway", sans-serif;
 }
