--- a/frontend/src/pages/Gamer/styles/GamerStorePage.css
+++ b/frontend/src/pages/Gamer/styles/GamerStorePage.css
@@ -6,5 +6,11 @@
 }
 
 .storeFooter {
+  margin-top: 30%;
+  color: white;
   text-align: center;
+}
+
+.storeFooter div {
+  font-family: "Raleway", sans-serif;
 }
