--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,5 @@
 /* Add main font styling here */
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Raleway:wght@600&display=swap");
 * {
-  font-family: Calibre, Helvetica, Arial, sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
