--- a/frontend/src/components/Gamer/styles/StoreList.css
+++ b/frontend/src/components/Gamer/styles/StoreList.css
@@ -7,12 +7,14 @@
 
 .gamerStoreListTitle {
   margin-top: 20px;
-  color: gainsboro;
-  text-align: center;
+  color: white;
+  margin-left: 13%;
+  font-family: "Raleway", sans-serif;
 }
 
 .gamerStoreListDescription {
-  color: gainsboro;
-  text-align: center;
+  color: white;
   margin-bottom: 20px;
+  margin-left: 13%;
+  font-family: "Raleway", sans-serif;
 }
