--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,17 +1,4 @@
-/*body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-*/
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Raleway:wght@600&display=swap");
 html {
-  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
